test/e2e/testdata/.snapshots/TestSetupFailureFlow/Invalid_Project_ID/GET__api_private_ipinfo_1.snaphost
HTTP/2.0 401 Unauthorized
Content-Length: 106
Content-Type: application/json
Date: Tue, 06 May 2025 09:24:36 GMT
Server: mdbws
Www-Authenticate: Digest realm="MMS Public API", domain="", nonce="cQK0dyw8f667wQXJXA3pkvqKXMoJHhid", algorithm=MD5, qop="auth", stale=false
X-Xgen-Up-Proto: HTTP/2

{
  "error" : 401,
  "reason" : "Unauthorized",
  "detail" : "You are not authorized for this resource."
}